# Detkit3DS

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _clang-format  main.c  setup.sh  sub.sh
cmake/: FindCITRO2D.cmake  FindCITRO3D.cmake  FindCTRULIB.cmake  Tools3DS.cmake
lib/liblvgl/: CMakeLists.txt  lv_conf.h
lib/lvgl/: CMakeLists.txt
lib/lvgl-8.3.11/: CMakeLists.txt
rom/: bannertool  homebrew.rsf
src/: cam.c  cam.h  device.c  device.h  display.c  input.c  input.h  lv_conf.h  main.c  sections.h  thread.c  thread.h  ui.c  ui.h  virtual_button.c  widget.h
src/asset/: L_icon.c  Mid_fill.c  R_icon.c  Sprite-L.c  Sprite-R.c  Sprite_L.c  Sprite_R.c  _ncnn.c  cam_icon.c  cam_icon_L.c  cam_icon_R.c  cam_icon_flip.c  citra_logo.c  devkitpro.c  ftpd_icon.c  iconL.c  iconR.c  logo_lvgl.c  mid.c  ncnn_bg.c
src/detector/: CMakeLists.txt  detector.c  detector.h  fastestdet.c  nanodet.c
src/device/: cam.c  display.c
src/lvgl/: CMakeLists.txt  Readme.md
src/lvgl-8.3.11/: CMakeLists.txt
src/main/: cam.c  display.c  input.c  main.c  sections.h  ui.c
src/sections/: cam.c  display.c  display.h  input.c  input.h  thread.c  ui.c  ui.h
src/sections/ui/: result.c  streaming.c  tabview.c  virtual_button.c  widget.h
src/sections/widgets/: background.c  result.c  streaming.c  widget.h
src/ui/: background.c  button.c  result.c  streaming.c  tabview.c
test/: CMakeLists.txt  citro2dtest.c  ctru_thread_test.c  lvgl_hello_world.c  test.c  test.rsf  test_png_load.c  test_template.c  test_thread.c
